# ai-rss-reader

./: .env.example  .gitignore  AGENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.md
alembic/: env.py
alembic/versions/: 20260319_0001_init.py  20260320_0002_update_dedup_unique.py  20260321_0003_add_favorites.py
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  article.py
app/schemas/: article_schema.py  config_schema.py
app/services/: config_service.py  digest_service.py  email_service.py  llm_service.py  rss_service.py  scheduler_service.py
app/static/css/: main.css
app/templates/: article_detail.html  article_list.html  daily_digest.html
config/: rss_config.example.yaml
scripts/: docker-entrypoint.sh  run_daily_digest_once.py  run_fetch_once.py  start_server.sh  update-image.sh
tests/: test_rss_service.py
